almost completed configuration interface, ran into mystery bug going to undo changes until issue resovleves its self.

--- a/services/cabinet/public/html/estimate.html
+++ b/services/cabinet/public/html/estimate.html
@@ -14,7 +14,12 @@
     <div id='login'><div id='login-cnt' class='center-all'></div></div>
     <div id='display-ctn'>
       <div id='app' name='Orders'></div>
-      <div id='property-manager' name='Property Manager'>Prop Man</div>
+      <div name='Property Manager'>
+        <div class='center'>
+          <button id='property-manager-save-all'>Save All</button>
+        </div>
+        <div id='property-manager'></div>
+      </div>
       <div id='cost-manager' name='Cost Manager'>
         <div class="center">
           <h2 id='cost-manager-header'>
