I think I fixed custom-calc... FINAALLYY

--- a/public/html/custom-calc.html
+++ b/public/html/custom-calc.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <script type="text/javascript" src='/js/utils/dom-utils.js'></script>
     <script type="text/javascript" src='/js/utils/utils.js'></script>
+    <script type="text/javascript" src='/js/utils/object/lookup.js'></script>
+    <script type="text/javascript" src='/js/utils/string-math-evaluator.js'></script>
     <script type="text/javascript" src='/js/utils/measurement.js'></script>
     <script type="text/javascript" src='/js/utils/request.js'></script>
-    <script type="text/javascript" src='/js/utils/string-math-evaluator.js'></script>
     <script type="text/javascript" src='/pssst/js/pssst-client.js'></script>
     <style>
     @media only screen
