camping changes to 2d layout

--- a/services/cabinet/public/html/estimate.html
+++ b/services/cabinet/public/html/estimate.html
@@ -39,5 +39,6 @@
         <button id='max-min-btn'>+</button>
       </div>
     </div>
+    <div class="" id='controls-2d'></div>
   </body>
 </html>
