2d layout is mostly working computer crashed last night dont want to loose my work

--- a/services/cabinet/public/html/estimate.html
+++ b/services/cabinet/public/html/estimate.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <style>
-      .canC { width:650px;  height:650px;}
+      #two-d-model { width: 500px;  height:500px;}
       div {
         font-size:x-small;
       }
@@ -32,7 +32,7 @@
     </div>
     <div id='property-select-cnt'></div>
 
-    <canvas class="canC" id="canV" width=650 height=650></canvas>
+    <canvas id="two-d-model" width=500 height=500></canvas>
     <div class='tree-d-model-cnt'>
       <div id="model-controller" hidden></div>
       <div id="three-d-model" class="viewer small">
