two d layout and builder wroking together effectivly

--- a/services/cabinet/public/html/estimate.html
+++ b/services/cabinet/public/html/estimate.html
@@ -26,7 +26,7 @@
           <div id='model-display-cnt'>
             <canvas id="two-d-model"></canvas>
             <div id="three-d-model" class="viewer small">
-              <span id="model-controller"></span>
+              <span><div id="model-controller"></div></span>
               <span id="three-d-model-display"></span>
             </div>
           </div>
