fixed polgon.merge function.... messed something else up

--- a/services/cabinet/public/html/sa.html
+++ b/services/cabinet/public/html/sa.html
@@ -20,16 +20,13 @@
           <div id='room-cnt'></div>
         </div>
         <div id='model-cnt'>
-          <div class='relitive'>
-            <div id='display-menu'></div>
-            <div id='model-display-cnt'>
-              <canvas id="two-d-model"></canvas>
-              <div id="three-d-model" class="viewer small">
-                <div class='inline left'>
-                  <div id='three-d-orientation-controls'></div>
-                  <span id="model-controller"></span>
-                  <span id="three-d-model-display"></span>
-                </div>
+          <div id='display-menu'></div>
+          <div id='model-display-cnt'>
+            <canvas id="two-d-model"></canvas>
+            <div id="three-d-model" class="viewer small">
+              <div class='inline left'>
+                <div class='orientation-controls'></div>
+                <span id="model-controller"></span>
               </div>
             </div>
           </div>
