--- a/services/cabinet/public/html/estimate.html
+++ b/services/cabinet/public/html/estimate.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <style>
-      /* #two-d-model { width: 500px;  height:500px;} */
       div {
         font-size:x-small;
       }
@@ -24,7 +23,10 @@
         <div id='model-cnt'>
           <div id='display-menu'></div>
           <div id='model-display-cnt'>
-            <canvas id="two-d-model"></canvas>
+            <div id="two-d-model">
+              <canvas id="two-d-model-canvas"></canvas>
+              <div class='orientation-controls'></div>
+            </div>
             <div id="three-d-model" class="viewer small">
               <span><div id="model-controller"></div></span>
               <span id="three-d-model-display"></span>
