--- a/public/html/company-eqn.html
+++ b/public/html/company-eqn.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
 
       function parseList(str) {
-        return str.split(',');
+        return str.split(',').map((s => s.trim()));
       }
       parseList.regex = /.{1,}?,.{1,}/;
       function parseValue(str) {
@@ -21,12 +21,12 @@
 
       }
       const lineReg = /(.{1,}?)=(.*)/;
-      const varReg = /[^+^-^*^/]{1,}/g;
+      const varReg = /[a-zA-Z]{1}[a-zA-Z0-9]*/g;
       let startKey;
       function parseLine(line, obj) {
         const match = line.match(lineReg);
         if (match === null) return;
-        const key = match[1];
+        const key = match[1].trim();
         const value = match[2];
         if (startKey === undefined) startKey = key;
         if (value.match(parseList.regex)) obj[key] = parseList(value);
@@ -38,10 +38,33 @@
         }
       }
 
+      const sme = new StringMathEvaluator();
+      const chosen = {drawerBottom: 'include', bottomSelection: 'mapleA4QuarterInch'};
       function display(obj, startKey) {
-        const value = obj[startKey];
-        const choices = {};
-
+        let keys = [startKey];
+        const keysFound = {};
+        const choices = [];
+        let keyIndex = 0;
+        while (keyIndex < keys.length) {
+          const key = keys[keyIndex];
+          if (keysFound[key] === undefined) {
+            const value = obj[key];
+            if (Array.isArray(value)) {
+              choices.push({key, value});
+              const chose = chosen[key];
+              if (obj[chose] !== undefined && !Number.isFinite(obj[chose])) keys.push(chose);
+            } else if (value instanceof Object && value.variables) {
+              keys = keys.concat(value.variables);
+            } else if (Number.isFinite(value)) {
+              choices.push({key, checkbox: true});
+            } else {
+              choices.push({key, number: true});
+            }
+            keysFound[key] = true;
+          }
+          keyIndex++;
+        }
+        console.log(choices);
       }
       let obj;
       window.onload = () => {
@@ -58,19 +81,43 @@
   </head>
   <body>
     <textarea id='input'>
-    type=prefinised,normal
-    prefinised=width*length*height+notched+branded
-    normal=woodSpecies*width*length*heigt+notched+branded+finished
-    finished=1 Top Coat,2 Top Coats
-    1 Top Coat=4.50
-    2 Top Coat=6.00
+    drawerBox=(width * depth * 2 * height / 144 * woodSpecies) + drawerBottom + assembly + roundOver + notchAndDrill + brandInside + PIpulloutOptions
+    drawerBottom=include,noThankYou
+    include=(width * length / 144 * bottomSelection)
+    noThankYou=0
+    bottomSelection=mapleA4QuarterInch,mapleB1HalfInch
+    mapleA4QuarterInch=2.00
+    mapleB1HalfInch=3.00
 
-    woodSpecies=softMapel,birtch,walnut
-    notched=2.00
-    branded=4.00
-    softMapel=1
-    birtch=1.3
-    wallnut=2.5
+
+    roundOver=3.00
+    notchAndDrill=1.50
+    brandInside=1.50
+
+    assembly=unassembledWithOutBottom,unassembledWithBottom,assembledUnfinished,assembledPrefinished1Topcoat,assembledPrefinished2Topcoats
+    unassembledWithOutBottom=6.00
+    unassembledWithBottom=8.00
+    assembledUnfinished=10.00
+    assembledPrefinished1Topcoat=16.00
+    assembledPrefinished2Topcoats=20.00
+
+    woodSpecies=whiteSoftMapel,redOak,selectWalnut,rusticWalnut,bassWood,balticBirtch
+    whiteSoftMapel=6.00
+    redOak=5.50
+    selectWalnut=11.00
+    rusticWalnut=7.00
+    bassWood=5.00
+    balticBirtchPlywood=3.50
+
+    PIpulloutOptions=standardScoop,scallopedSided,fullDovetailPlumingNotch,signatureTrashRollout,cornerDrawersWithDovetail
+    standardScoop=3.00
+    scallopedSided=5.00
+    fullDovetailPlumingNotch=35.00
+    signatureTrashRollout=30.00
+    cornerDrawersWithDovetail=40.00
+
+    height>17=*2.75
+    height>8=*????
     </textarea>
   </body>
 </html>
