--- a/public/html/custom-calc.html
+++ b/public/html/custom-calc.html
@@ -330,7 +330,8 @@
         const key = du.param.get('name');
         const value = du.param.get('token');
         const json = stateObject();
-        Request.post('/pssst/save/json', {group: 'custom-calc', key, value, json}, console.log, console.log);
+        notify = (status) => alert(`Save ${status}`);
+        Request.post('/pssst/save/json', {group: 'custom-calc', key, value, json}, notify('Successful'), notify('Failed'));
       }
 
       let initialLoad = true;
