build documents added still need work

--- a/services/canvas-buddy/public/html/index.html
+++ b/services/canvas-buddy/public/html/index.html
@@ -20,6 +20,7 @@
             <input type='radio' name='parcer' value='2D'>
             <label>3D</label>
             <input type='radio' name='parcer' value='3D' checked>
+            <input type='number' name='scale' placeholder="Scale">
           </div>
           <textarea rows='40' cols='50'></textarea>
         </div>
