angled cut documention implemented need validate and fix any bugs

--- a/services/canvas-buddy/public/html/index.html
+++ b/services/canvas-buddy/public/html/index.html
@@ -35,6 +35,17 @@
         </div>
         <div id='three-d-display'>
           <div class='orientation-controls'></div>
+          <div>
+            <lable>Line Display:</lable>
+            <div class='tab' id='display-radios-3d'>
+              <lable>Vector</lable>
+              <input type='radio' name='line-disp-type' value='VECTOR' checked>
+              <lable>Points</lable>
+              <input type='radio' name='line-disp-type' value='POINTS'>
+              <lable>Line Only</lable>
+              <input type='radio' name='line-disp-type' value='LINE_ONLY'>
+            </div>
+          </div>
         </div>
       </div>
     </div>
