--- a/services/canvas-buddy/public/html/index.html
+++ b/services/canvas-buddy/public/html/index.html
@@ -22,7 +22,7 @@
             <input type='radio' name='parcer' value='3D' checked>
             <input type='number' name='scale' placeholder="Scale">
           </div>
-          <textarea rows='40' cols='50'></textarea>
+          <textarea rows='40' cols='50' wrap='off'></textarea>
         </div>
         <div>
           <p>Points: <b>(x1,y1),(x2,y2),(x3,y3)...</b></p>
