complex cuts mostly working oob still not behaving properly

--- a/services/canvas-buddy/public/html/index.html
+++ b/services/canvas-buddy/public/html/index.html
@@ -39,9 +39,9 @@
           <label>Line Display:</label>
           <div class='tab' id='display-radios-3d'>
             <lable>Line Only</lable>
-            <input type='radio' name='line-disp-type' value='LINE_ONLY' checked>
+            <input type='radio' name='line-disp-type-2d' value='LINE_ONLY' checked>
             <lable>Vector</lable>
-            <input type='radio' name='line-disp-type' value='VECTOR'>
+            <input type='radio' name='line-disp-type-2d' value='VECTOR'>
           </div>
 
           <canvas></canvas>
